--- a/.sync.yml
+++ b/.sync.yml
@@ -1,3 +1,11 @@
 ---
 spec/spec_helper.rb:
   mock_with: ':rspec'
+  spec_overrides: |-
+    require 'webmock/rspec'
+    require 'vcr'
+    VCR.configure do |c|
+      c.cassette_library_dir = File.join(File.dirname(__FILE__), 'fixtures/vcr_cassettes')
+      c.default_cassette_options = { match_requests_on: [:method, :uri] }
+      c.hook_into :webmock
+    end
