Add vcr and webmock gems to .sync.yml and Gemfile for unit testing

--- a/.sync.yml
+++ b/.sync.yml
@@ -1,4 +1,9 @@
 ---
+Gemfile:
+  required:
+    ':development':
+      - gem: vcr
+      - gem: webmock
 spec/spec_helper.rb:
   mock_with: ':rspec'
   spec_overrides: |-
